r8q_defconfig: use lzo-rle for zRAM
Signed-off-by: Samuel Pascua <pascua.samuel.14@gmail.com>

--- a/arch/arm64/configs/r8q_defconfig
+++ b/arch/arm64/configs/r8q_defconfig
@@ -330,7 +330,6 @@ CONFIG_MHI_UCI=y
 CONFIG_MHI_SATELLITE=y
 CONFIG_CONNECTOR=y
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
@@ -959,6 +958,7 @@ CONFIG_CRYPTO_KBKDF_CTR_HMAC_SHA512=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
