--- a/arch/arm64/configs/r8q_defconfig
+++ b/arch/arm64/configs/r8q_defconfig
@@ -935,7 +935,7 @@ CONFIG_PSTORE_PMSG_SSPLOG=y
 CONFIG_PSTORE_RAM=y
 CONFIG_EROFS_FS=y
 CONFIG_SEC_DEBUG_FPUT_WATCHDOG=y
-CONFIG_FS_HPB=y
+# CONFIG_FS_HPB is not set
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
@@ -946,11 +946,11 @@ CONFIG_MST_V2=y
 CONFIG_MFC_CHARGER=y
 CONFIG_HDM=y
 # CONFIG_INTEGRITY is not set
-CONFIG_SECURITY_DSMS=y
-CONFIG_GAF=y
-CONFIG_GAF_V6=y
-CONFIG_SDP=y
-CONFIG_DDAR=y
+# CONFIG_SECURITY_DSMS is not set
+# CONFIG_GAF is not set
+# CONFIG_GAF_V6 is not set
+# CONFIG_SDP is not set
+# CONFIG_DDAR is not set
 # CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
